syntax = "proto3";

package lnrpc;

service Lightning {
    rpc SendMany(SendManyRequest) returns (SendManyResponse);
    rpc NewAddress(NewAddressRequest) returns (NewAddressResponse);

    rpc ConnectPeer(ConnectPeerRequest) returns (ConnectPeerResponse);
}

message SendManyRequest {
    map<string, int64> AddrToAmount = 1;
}

message SendManyResponse {
    string txid = 1;
}

message NewAddressRequest {}

message NewAddressResponse {
    string address = 1;
}

message ConnectPeerRequest {
	string idAtHost = 1;
}

message ConnectPeerResponse {
	bytes lnID = 1;
}
